welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:15: error: not found: value a
      a = (i + decalage)%T.length
      ^Array2:16: error: not found: value a
      tampon(T,a)
               ^